# CPP3_SmartCalc_v2.0-1

./: .gitignore  README.md
src/: Makefile  calcController.cpp  calcController.h  calcModel.cpp  calcModel.h  calcTests.cc  calcView.cpp  calcView.h  calcView.pro  calcView.ui  credit.cpp  credit.h  credit.ui  debit.cpp  debit.h  debit.ui  graph.cpp  graph.h  graph.ui  info.tex  main.cpp  main.h  qcustomplot.cpp  qcustomplot.h
src/CPP7_SmartCalc/: CMakeLists.txt  credit.ui  debit.h  debit.ui  smartcalc.cpp  smartcalc.h  smartcalc.ui
src/calcTest/: CMakeLists.txt  calcModel.cpp  calcModel.h  calcTest.pro  gtest_dependency.pri  main.cpp  tstCalculate.cpp  tst_calculate.cpp
